--- a/static/css/main.less
+++ b/static/css/main.less
@@ -38,6 +38,7 @@ img {
 @import (less) "vars.less";
 @import (less) "meta.less";
 @import (less) "media-object.less";
+@import (less) "post.less";
 @import (less) "summary.less";
 @import (less) "content-blocks.less";
 
