--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -5709,6 +5709,93 @@ img {
 }
 
 /* topdoc
+  name: Header slug
+  family: cfgov-meta
+  patterns:
+    - name: Default header slug
+      markup: |
+        <div class="header-slug">
+            <h2 class="header-slug_inner">
+                Blog summary
+            </h2>
+        </div>
+      codenotes:
+        - |
+          Structural cheat sheet:
+          -----------------------
+          .header-slug
+            .header-slug_inner
+  tags:
+    - cfgov-meta
+*/
+
+.header-slug_inner {
+  margin-top: 0;
+  font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
+  font-weight: normal;
+  font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  margin-bottom: 0.35714285714285715em;
+  font-size: 0.875em;
+  line-height: 1.5714285714285714;
+  display: inline-block;
+  padding-top: 0.2857142857142857em;
+  margin-bottom: 1.2142857142857142em;
+  border-top: 4px solid #2cb34a;
+}
+
+.lt-ie9 .header-slug_inner {
+  font-weight: normal !important;
+}
+
+/* topdoc
+  name: Header slug container
+  family: cfgov-meta
+  patterns:
+    - name: Default header slug container
+      markup: |
+        <div class="header-slug header-slug__bordered">
+            <h2 class="header-slug_inner">
+                Blog summary
+            </h2>
+            <div class="header-slug_body">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Dolorum ex provident dolorem ipsum molestias eius tenetur
+                    doloribus obcaecati illum autem! Fuga commodi natus
+                    distinctio accusantium esse ab dolore in aliquid.
+                </p>
+            </div>
+        </div>
+      codenotes:
+        - |
+          Structural cheat sheet:
+          -----------------------
+          .header-slug.header-slug__bordered
+            .header-slug_inner
+            .header-slug_body
+  tags:
+    - cfgov-meta
+*/
+
+.header-slug__bordered {
+  margin: 0 0 1.875em;
+  border-top: 1px solid #e3e4e5;
+  border-bottom: 1px solid #e3e4e5;
+}
+
+.header-slug__bordered .header-slug_inner {
+  margin-top: -1px;
+}
+
+.header-slug__bordered .header-slug_body {
+  margin-bottom: 1.375em;
+}
+
+/* topdoc
   name: Meta header
   family: cfgov-meta
   patterns:
@@ -5861,28 +5948,34 @@ img {
       markup: |
         <article class="post">
             <header>
-                <a href="#" class="category-slug meta-header_left">
+                <a href="#" class="post_slug category-slug">
                     <i class="cf-icon cf-icon-help"></i>
                     Announcements &amp; updates
                 </a>
-                <h1>A consumer-centered supervision program</h1>
-                <div class="post_meta">
-                    <span class="byline">By <a class="byline_link" href="#">Firstname Lastname</a></span> &ndash;
-                    <span class="short-date">Mon 32, 3001</span>
-                    <ul class="share-links">
-                        <li><a href="#"><i class="cf-icon cf-icon-email-square"></i> Email</a></li>
-                        <li><a href="#"><i class="cf-icon cf-icon-facebook-square"></i> Facebook</a></li>
-                        <li><a href="#"><i class="cf-icon cf-icon-twitter-square"></i> Twitter</a></li>
-                        <li><a href="#"><i class="cf-icon cf-icon-linkedin-square"></i> LinkedIn</a></li>
-                    </ul>
-                </div>
-                <img class="post_featured-img" src="http://placekitten.com/706/408" alt="alt text">
-                <h2>Post summary</h2>
-                <p class="summary">
-                    Lorem ipsum dolor sit amet, ea has partem perpetua. Eu graeci adipisci evertitur mei,
-                    id maiestatis elaboraret dissentias his. Eos id alia graeco timeam, id malis augue quo.
-                    Labitur liberavisse quo ei, utamur impetus eu nam.
+                <h1 class="post_header">A consumer-centered supervision program</h1>
+                <p>
+                    <span class="post_byline">By <a href="#">Firstname&nbsp;Lastname</a> &ndash;</span>
+                    <span class="post_date date">Mon 32, 3001</span>
                 </p>
+                <ul class="post_share share-icons">
+                    <li><a href="#"><i class="cf-icon cf-icon-email-social-square"></i> Email</a></li>
+                    <li><a href="#"><i class="cf-icon cf-icon-facebook-square"></i> Facebook</a></li>
+                    <li><a href="#"><i class="cf-icon cf-icon-twitter-square"></i> Twitter</a></li>
+                    <li><a href="#"><i class="cf-icon cf-icon-linkedin-square"></i> LinkedIn</a></li>
+                </ul>
+                <img class="post_featured-img" src="http://placekitten.com/706/408" alt="alt text">
+                <div class="post-summary header-slug header-slug__bordered">
+                    <h2 class="post-summary_header header-slug_inner">
+                        Blog summary
+                    </h2>
+                    <div class="header-slug_body">
+                        <p class="post-summary_text">
+                            Lorem ipsum dolor sit amet, ea has partem perpetua. Eu graeci adipisci evertitur mei,
+                            id maiestatis elaboraret dissentias his. Eos id alia graeco timeam, id malis augue quo.
+                            Labitur liberavisse quo ei, utamur impetus eu nam.
+                        </p>
+                    </div>
+                </div>
             </header>
             <p>
                 Lorem ipsum dolor sit amet, ea has partem perpetua. Eu graeci adipisci evertitur mei,
@@ -5913,14 +6006,98 @@ img {
                 Labitur liberavisse quo ei, utamur impetus eu nam.
             </p>
             <footer>
-                <div class="demo-placeholder">tags placeholder</div> <!-- see commented implementation on CFPB Open Tech-->
+                <div class="demo-placeholder">tags placeholder</div>
+                <!-- see commented implementation on CFPB Open Tech-->
             </footer>
         </article>
+      codenotes:
+        - |
+          Structural sheat sheet:
+          -----------------------
+          .post
+            .post_slug
+            .post_header
+            .post_byline
+            .post_date
+            .post_share
+            .post_featured-img
+            .post_summary
+            .post_text
   tags:
     - cfgov-post
 */
 
-/* Less goes here */
+.post_header {
+  margin-top: 0;
+  font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  margin-bottom: 0.3076923076923077em;
+  font-size: 1.625em;
+  line-height: 1.2692307692307692;
+}
+
+.post_header {
+  margin-top: 0;
+  font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  margin-bottom: 0.47058823529411764em;
+  font-size: 2.125em;
+  line-height: 1.2941176470588236;
+}
+
+.post_byline {
+  margin-top: 0;
+  font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
+  font-weight: normal;
+  font-family: "AvenirNextLTW01-Medium", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  margin-bottom: 0.2777777777777778em;
+  font-size: 1.125em;
+  line-height: 1.2222222222222223;
+}
+
+.lt-ie9 .post_byline {
+  font-weight: normal !important;
+}
+
+.post_featured-img {
+  margin: 0 0 1.875em;
+}
+
+.post-summary_header_inner {
+  margin-top: 0;
+  font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
+  font-weight: normal;
+  font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  margin-bottom: 0.35714285714285715em;
+  font-size: 0.875em;
+  line-height: 1.5714285714285714;
+  display: inline-block;
+  padding-top: 0.2857142857142857em;
+  margin-bottom: 1.2142857142857142em;
+  border-top: 4px solid #2cb34a;
+}
+
+.lt-ie9 .post-summary_header_inner {
+  font-weight: normal !important;
+}
+
+.post-summary_text {
+  margin-top: 0;
+  font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  margin-bottom: 0.22727272727272727em;
+  font-size: 1.375em;
+  line-height: 1.2727272727272727;
+}
 
 /* topdoc
   name: EOF
